[package]
name = "udppp"
version = "0.4.0"
edition = "2021"
authors = ["b23r0 <b23r0@foxmail.com>"]
description = "High performence UDP proxy with Proxy Protocol and mmproxy support"
homepage = "https://github.com/b23r0/udppp"
repository = "https://github.com/b23r0/udppp"
readme = "README.md"
keywords = ["proxy", "udp", "networking" , "proxyprotocol" , "mmproxy", "transparent ip"]
license = "MIT"

[dependencies]
simple_logger = "2.1.0"
log = "0.4.14"
getopts = "0.2"
rand = "0.8.5"
proxy-protocol = "0.5.0"
chrono = "0.4.19"
udp_sas = "0.1.3"
bytes = "1.1.0"
net2 = "0.2.37"
tokio = { version = "1", features = ["full"] }
num_cpus = "1.13.1"
mimalloc = "0.1.28"