[package]
name = "udpbench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
net2 = "0.2.37"
num_cpus = "1.13.1"
getopts = "0.2"
futures = "0.3.0"
chrono = "0.4.19"
async-std = {version = "1" , features = ["attributes"]}